# cool

./: .gitignore  CHANGELOG.md  CHANGELOG_ALL.md  CHANGELOG_EN.md  Cargo.toml  README.md  README_EN.md  ROADMAP.md  ROADMAP_EN.md  index.d.ts  index.js  package-lock.json  package.json
.github/workflows/: CI.yml
__test__/: index.spec.ts
benchmark/: bench.ts
src/: lib.rs
