
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "cool"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "3.0.0"
napi-derive = "3.0.0"
sysinfo     = "0.37.2"
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Storage_FileSystem",
  "Win32_Foundation",
] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
